micro-svc-backend/micro-svc-backend-k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      containers:
        - name: backend-app
          image: 315073111691.dkr.ecr.ap-southeast-2.amazonaws.com/micro-svc-backend@sha256:0914588ffa1fe4b4551eb92b13f90987749a90b20bcf07c0ddb13f511ac43c75
          ports:
            - containerPort: 80
