micro-svc-backend/micro-svc-backend-k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
